# reiseplatform-case-m2

./: .gitignore  LICENSE  README.md  docker-compose.yml  nginx.conf  package-lock.json
.github/workflows/: checkout-backend-dev.yml  checkout-backend-docker.yml  checkout-frontend-dev.yml  checkout-frontend-docker.yml  monitoring-backend-dev.yml  monitoring-backend-docker.yml  monitoring-frontend-dev.yml  monitoring-frontend-docker.yml  travelmanagement-backend-dev.yml  travelmanagement-backend-docker.yml  travelmanagement-frontend-dev.yml  travelmanagement-frontend-docker.yml  usermanagement-backend-dev.yml  usermanagement-backend-docker.yml  usermanagement-docker.yml  usermanagement-frontend-action.yml  usermanagement-frontend-dev.yml  usermanagement-frontend-docker.yml  usermanagement-prod.yml
checkout/: ApplyManifests.md  Dockerfile  README.md  RunInVM.md  allinone.yml  deployments.yml  docker-compose.yml
checkout/backend/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
checkout/backend/checkout-backend/: Cargo.toml
checkout/backend/checkout-backend/src/: dto.rs  main.rs  models.rs  request_helper.rs
checkout/backend/message-service/: Cargo.toml
checkout/backend/message-service/src/: lib.rs
checkout/docker/: README.md  docker-compose-local.yml  docker-compose-with-kafka.yml  docker-compose-without-kafka.yml  docker-compose.yml  nginx.conf
checkout/docs/: ApplyManifests.md  RunBareMetal.md  RunInVM.md
checkout/frontend/: Dockerfile  README.md  angular.json  bun.lockb  example.docker.env  nginx.conf  package-lock.json  package.json  svelte.config.js
docker/: README.md  delete-container.sh  docker-compose-checkout.yml  docker-compose-kafka.yml  docker-compose-monitoring.yml  docker-compose-proxy.yml  docker-compose-travelmanagement.yml  docker-compose-usermanagement.yml  network_management.sh  start-container.sh
docker/config/: nginx.monitor.conf  nginx.proxy.conf  nginx.travelmanagement.conf  nginx.usermanagement.conf
hotel-management/: go.mod  main.go
hotel-management/adapter/: crud_repository.go  hotel_repository_impl.go  management_db.go  pg_repository.go  travel_repository_impl.go
hotel-management/application/: hotel_service_impl.go
hotel-management/domain/: hotel_service.go  hotelservice.go  (+2 more)
kubernetes/: README.md  nginx.yaml  start.sh
monitoring/: README.md  docker-compose.yml
monitoring/backend/kafka-consumer/: Cargo.toml
monitoring/backend/kafka-consumer/src/: lib.rs
monitoring/backend/monitoring-db/: Cargo.toml
monitoring/backend/monitoring-db/migrations/2023-12-30-094018_events/: down.sql
monitoring/backend/monitoring-db/src/: lib.rs  model.rs  schema.rs
monitoring/backend/monitoring-service/: .env  Cargo.toml
monitoring/backend/monitoring-service/src/: main.rs  model.rs
travel-management/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-global.yml  docker-compose.yml  nginx.conf  package-lock.json
usermanagement/: .env  .gitignore  README.md  RunInVM.md  deployments.yml  docker-compose-local.yml  docker-compose.yml
(+399 files in other folders)
