[package]
name = "checkout-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
jwt-auth = {path="../jwt-auth"}
checkout-db = {path="../checkout-db"}
message-service = {path="../message-service"}
actix-cors = "0.6"
serde = "1.0"