[package]
name = "checkout-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
jwt-auth = {path="../jwt-auth"}
checkout-db = {path="../checkout-db"}
message-service = {path="../message-service"}
actix-cors = "0.6"
serde = "1.0"
dotenvy = "0.15.7"
reqwest = {version = "0.11.23", features = ["json"]}
env_logger = { version = "0.10.1", features = [] }