[package]
name = "message-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
serde = "1.0"
rdkafka = "0.36.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"